# strimor

./: CMakeLists.txt  LICENSE  README.md  benchmark.cpp  example.cpp  file_stream.cpp  strimor.hpp
.github/workflows/: benchmark.yml
